objects/WikiProfile__c.object
<CustomObject>
    <fields>
        <fullName>CreateWikiPages__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CreateWikiPages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ManageWikis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ManageWikis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PostWikiComments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PostWikiComments</label>
        <type>Checkbox</type>
    </fields>
    <label>Wiki Profile</label>
    <nameField>
        <label>Wiki Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wiki Profiles</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>